# physim.gpu

./: README.md  pyproject.toml  run_wave_simulation.py
physim/: simulation.py  visualizer.py
physim/core/: wave_equation.py
