[tool.poetry]
name = "physim-gpu"
version = "0.1.0"
description = ""
authors = ["Viraat Das <viraat.laldas@gmail.com>"]
readme = "README.md"
packages = [{include = "physim"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
